--- a/dirty_file/GPT.ipynb
+++ b/dirty_file/GPT.ipynb
@@ -2,173 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "b6a0c678-a1f6-43e6-a3e1-6ff38cd7ced4",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import os\n",
-    "from langchain_openai import ChatOpenAI\n",
-    "from langchain_core.vectorstores import InMemoryVectorStore\n",
-    "from langchain_openai import OpenAIEmbeddings\n",
-    "from langchain_text_splitters import RecursiveCharacterTextSplitter\n",
-    "from langchain.chains import create_retrieval_chain\n",
-    "from langchain.chains.combine_documents import create_stuff_documents_chain\n",
-    "from langchain_core.prompts import ChatPromptTemplate\n",
-    "from dotenv import load_dotenv\n",
-    "from langchain_community.document_loaders import PyPDFLoader\n",
-    "\n",
-    "def rag_gpt():\n",
-    "    \n",
-    "    load_dotenv(\"C:/Users/busch/OneDrive/Documents/Fac/M2/UE1 - Advanced programming and data visualization/Advanced programming/projet/environment/.env\")\n",
-    "    os.environ[\"OPENAI_API_KEY\"] = os.getenv(\"OPENAI_API_KEY\")\n",
-    "    \n",
-    "    llm = ChatOpenAI(model=\"gpt-3.5-turbo\")\n",
-    "    \n",
-    "    context = False\n",
-    "    question = \"\"\n",
-    "    \n",
-    "    while question != \"Exit\":\n",
-    "        question = input() # Save the question of the user\n",
-    "        if context == False:\n",
-    "            \n",
-    "            # Scraping du menu du restaurant\n",
-    "            menu_to_pdf(question)\n",
-    "            \n",
-    "            # Connection au contexte\n",
-    "            file_path = \"C:/Users/busch/OneDrive/Documents/Fac/M2/UE1 - Advanced programming and data visualization/Advanced programming/projet/dirty_file/menu.pdf\"\n",
-    "            loader = PyPDFLoader(file_path)\n",
-    "\n",
-    "            docs = loader.load()\n",
-    "\n",
-    "            text_splitter = RecursiveCharacterTextSplitter(chunk_size=1000, chunk_overlap=200)\n",
-    "            splits = text_splitter.split_documents(docs)\n",
-    "            vectorstore = InMemoryVectorStore.from_documents(\n",
-    "                documents=splits, embedding=OpenAIEmbeddings()\n",
-    "            )\n",
-    "\n",
-    "            retriever = vectorstore.as_retriever()\n",
-    "\n",
-    "            # Prompt\n",
-    "            system_prompt = (\n",
-    "                \"You are an assistant for question-answering tasks about the menu of a specific restaurant. \"\n",
-    "                \"A give you a menu, just answer my question, and don't take attention to the name that I specified. \"\n",
-    "                \"Use the following pieces of retrieved context to answer \"\n",
-    "                \"the question. If you don't know the answer, say that you \"\n",
-    "                \"don't know. Use three sentences maximum and keep the \"\n",
-    "                \"answer concise.\"\n",
-    "                \"\\n\\n\"\n",
-    "                \"{context}\"\n",
-    "            )\n",
-    "\n",
-    "            prompt = ChatPromptTemplate.from_messages(\n",
-    "                [\n",
-    "                    (\"system\", system_prompt),\n",
-    "                    (\"human\", \"{input}\"),\n",
-    "                ]\n",
-    "            )\n",
-    "\n",
-    "            question_answer_chain = create_stuff_documents_chain(llm, prompt)\n",
-    "            rag_chain = create_retrieval_chain(retriever, question_answer_chain)\n",
-    "            \n",
-    "            context = True\n",
-    "\n",
-    "        if question != \"Exit\":\n",
-    "            # Write an answer from the LLM\n",
-    "            results = rag_chain.invoke({\"input\": question})\n",
-    "    \n",
-    "            # Print the answer\n",
-    "            print(results[\"answer\"])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "95804958-3996-4a84-83f0-ef2266b4d355",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      " What is the menu at Esplanade ?\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The menu at Esplanade includes dishes like chicken peppers with mustard, homemade tomato sauce, curry of homemade vegetables, penne with homemade poultry sauce, and spinach lasagna with homemade ricotta. They also offer sides like courgettes, fries, flat carrot beans, and boulgour with spices. For dessert, they have options like brownie, cocktail of exotic fruit, and vanilla light.\n"
-     ]
-    },
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      " What type of dessert are available ?\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The desserts available at Menu Esplanade include brownie, cocktail of exotic fruit, and vanilla light.\n"
-     ]
-    },
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      " Is there some vegetable today ?\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Yes, there are vegetable options available today such as courgettes, flat carrot beans, and a vegetable soup of the day containing carrots and celery.\n"
-     ]
-    },
-    {
-     "name": "stdin",
-     "output_type": "stream",
-     "text": [
-      " Exit\n"
-     ]
-    }
-   ],
-   "source": [
-    "rag_gpt()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "03ef82fb-966f-47b3-8900-b39feab13a30",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 25,
    "id": "8f9244ba-cefc-4368-95ac-9dcab835eaec",
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\busch\\anaconda3\\lib\\site-packages\\scipy\\__init__.py:146: UserWarning: A NumPy version >=1.16.5 and <1.23.0 is required for this version of SciPy (detected version 1.26.4\n",
-      "  warnings.warn(f\"A NumPy version >={np_minversion} and <{np_maxversion}\"\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "WARNING:tensorflow:From C:\\Users\\busch\\anaconda3\\lib\\site-packages\\tf_keras\\src\\losses.py:2976: The name tf.losses.sparse_softmax_cross_entropy is deprecated. Please use tf.compat.v1.losses.sparse_softmax_cross_entropy instead.\n",
-      "\n"
+     "ename": "TypeError",
+     "evalue": "str expected, not NoneType",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Input \u001b[1;32mIn [25]\u001b[0m, in \u001b[0;36m<cell line: 11>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      9\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mdotenv\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m load_dotenv\n\u001b[0;32m     10\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mlangchain_community\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mdocument_loaders\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m PyPDFLoader\n\u001b[1;32m---> 11\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mmenu_functions\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m menu_to_pdf\n\u001b[0;32m     13\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mrag_gpt\u001b[39m():\n\u001b[0;32m     15\u001b[0m     load_dotenv(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mC:/Users/busch/OneDrive/Documents/Fac/M2/UE1 - Advanced programming and data visualization/Advanced programming/projet/environment/.env\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "File \u001b[1;32m~\\Documents\\GitHub\\Crous-menu-application\\dirty_file\\menu_functions.py:21\u001b[0m, in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     19\u001b[0m os\u001b[38;5;241m.\u001b[39menviron[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mHF_DATASETS_CACHE\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m=\u001b[39m custom_cache_dir  \u001b[38;5;66;03m# Datasets-specific cache directory\u001b[39;00m\n\u001b[0;32m     20\u001b[0m os\u001b[38;5;241m.\u001b[39menviron[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mHF_METRICS_CACHE\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m=\u001b[39m custom_cache_dir  \u001b[38;5;66;03m# Metrics-specific cache directory\u001b[39;00m\n\u001b[1;32m---> 21\u001b[0m os\u001b[38;5;241m.\u001b[39menviron[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mHF_TOKEN\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m=\u001b[39m hf_token  \u001b[38;5;66;03m# Hugging Face API token\u001b[39;00m\n\u001b[0;32m     23\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mHF_model\u001b[39m(model, question):\n\u001b[0;32m     24\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m model \u001b[38;5;241m==\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mhours\u001b[39m\u001b[38;5;124m\"\u001b[39m:\n",
+      "File \u001b[1;32m~\\anaconda3\\lib\\os.py:684\u001b[0m, in \u001b[0;36m_Environ.__setitem__\u001b[1;34m(self, key, value)\u001b[0m\n\u001b[0;32m    682\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m__setitem__\u001b[39m(\u001b[38;5;28mself\u001b[39m, key, value):\n\u001b[0;32m    683\u001b[0m     key \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mencodekey(key)\n\u001b[1;32m--> 684\u001b[0m     value \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mencodevalue\u001b[49m\u001b[43m(\u001b[49m\u001b[43mvalue\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    685\u001b[0m     putenv(key, value)\n\u001b[0;32m    686\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_data[key] \u001b[38;5;241m=\u001b[39m value\n",
+      "File \u001b[1;32m~\\anaconda3\\lib\\os.py:742\u001b[0m, in \u001b[0;36m_createenviron.<locals>.check_str\u001b[1;34m(value)\u001b[0m\n\u001b[0;32m    740\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mcheck_str\u001b[39m(value):\n\u001b[0;32m    741\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(value, \u001b[38;5;28mstr\u001b[39m):\n\u001b[1;32m--> 742\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mTypeError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mstr expected, not \u001b[39m\u001b[38;5;132;01m%s\u001b[39;00m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;241m%\u001b[39m \u001b[38;5;28mtype\u001b[39m(value)\u001b[38;5;241m.\u001b[39m\u001b[38;5;18m__name__\u001b[39m)\n\u001b[0;32m    743\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m value\n",
+      "\u001b[1;31mTypeError\u001b[0m: str expected, not NoneType"
      ]
     }
    ],
